--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,15 @@ a:hover {
   color: #535bf2;
 }
 
+/* src/index.css */
+
+.truncated-text {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+
 body {
   font-family: Arial, sans-serif;
   background-color: #f5f5f5;
